# capyswarm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
capyswarm/: __init__.py  core.py  prompts.py  tools.py  types.py  util.py
capyswarm/repl/: repl.py
examples/basic/: README.md  github_analysis.py  hackernews.py  hn_analysis.py  hn_mal.py  repl.py  weather.py
examples/chess/: README.md  agents.py  run.py
examples/wordle/: README.md  agents.py  run.py
